--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="calculator">
-        <input type="text">
+        <input type="text" diasbled>
         <div class="buttons">
             <button onclick="clearDisplay()">C</button>
             <button onclick="appendValue(7)">7</button>
@@ -30,4 +30,5 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 </html>
