--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="calculator">
-        <input type="text" diasbled>
+        <input type="text" disabled>
         <div class="buttons">
             <button onclick="clearDisplay()">C</button>
             <button onclick="appendValue(7)">7</button>
@@ -32,3 +32,4 @@
 </body>
 
 </html>
+
