--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <button onclick="appendValue(4)">4</button>
             <button onclick="appendValue(5)">5</button>
             <button onclick="appendValue(6)">6</button>
-            <button onclick="appendValue('%')">%</button>
+            <button onclick="appendValue('*')">*</button>
             <button onclick="appendValue(1)">1</button>
             <button onclick="appendValue(2)">2</button>
             <button onclick="appendValue(3)">3</button>
@@ -30,6 +30,4 @@
     </div>
     <script src="script.js"></script>
 </body>
-
 </html>
-
